Add-Audios-Finais

--- a/cores.html
+++ b/cores.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <div class="container">
-            <img src="./src/images/logo apae caruaru.svg" alt="Logo da Apae">
+            <a href="index.html"><img src="./src/images/logo apae caruaru.svg" alt="Logo da Apae"></a>
         </div>
         <div class="row"></div>
     </div>
@@ -25,8 +25,8 @@
                 <div class="card-content">
                     <p>AMARELO</p>
                 </div>
-                <audio id="eu_ouco_player">
-                    <source src="" type="">
+                <audio id="amarelo_player">
+                    <source src="src/audio/cores/amarelo.mp3" type="audio/mp3">
                 </audio>
             </div>
                             
@@ -34,8 +34,8 @@
                 <div class="card-content">
                     <p>AZUL</p>
                 </div>
-                <audio id="eu_quero_player">
-                    <source src="src/audio/eu_quero.mp3" type="audio/mp3">
+                <audio id="azul_player">
+                    <source src="src/audio/cores/azul.mp3" type="audio/mp3">
                 </audio>
             </div>
 
@@ -43,8 +43,8 @@
                 <div class="card-content">
                     <p>VERMELHO</p>
                 </div>
-                <audio id="eu_sinto_player">
-                    <source src="" type="">
+                <audio id="vermelho_player">
+                    <source src="src/audio/cores/vermelho.mp3" type="audio/mp3">
                 </audio>
             </div>
 
@@ -52,8 +52,8 @@
                 <div class="card-content">
                     <p>VERDE</p>
                 </div>
-                <audio id="eu_vejo_player">
-                    <source src="" type="">
+                <audio id="verde_player">
+                    <source src="src/audio/cores/verde.mp3" type="audio/mp3">
                 </audio>
             </div>
 
@@ -61,8 +61,8 @@
                 <div class="card-content">
                     <p>MARROM</p>
                 </div>
-                <audio id="eu_gosto_player">
-                    <source src="" type="">
+                <audio id="marrom_player">
+                    <source src="src/audio/cores/marrom.mp3" type="audio/mp3">
                 </audio>
             </div>
 
@@ -70,8 +70,8 @@
                 <div class="card-content">
                     <p>ROSA</p>
                 </div>
-                <audio id="eu_vejo_player">
-                    <source src="" type="">
+                <audio id="rosa_player">
+                    <source src="src/audio/cores/rosa.mp3" type="audio/mp3">
                 </audio>
             </div>
 
@@ -79,8 +79,8 @@
                 <div class="card-content">
                     <p>ROXO</p>
                 </div>
-                <audio id="eu_vejo_player">
-                    <source src="" type="">
+                <audio id="roxo_player">
+                    <source src="src/audio/cores/roxo.mp3" type="audio/mp3">
                 </audio>
             </div>
             
@@ -88,8 +88,8 @@
                 <div class="card-content">
                     <p>PRETO</p>
                 </div>
-                <audio id="eu_vejo_player">
-                    <source src="" type="">
+                <audio id="preto_player">
+                    <source src="src/audio/cores/preto.mp3" type="audio/mp3">
                 </audio>
             </div>
 
@@ -97,8 +97,8 @@
                 <div class="card-content">
                     <p>BRANCO</p>
                 </div>
-                <audio id="eu_vejo_player">
-                    <source src="" type="">
+                <audio id="branco_player">
+                    <source src="src/audio/cores/branco.mp3" type="audio/mp3">
                 </audio>
             </div>
 
@@ -106,8 +106,8 @@
                 <div class="card-content">
                     <p>CINZA</p>
                 </div>
-                <audio id="eu_vejo_player">
-                    <source src="" type="">
+                <audio id="cinza_player">
+                    <source src="src/audio/cores/cinza.mp3" type="audio/mp3">
                 </audio>
             </div>
 
@@ -115,8 +115,8 @@
                 <div class="card-content">
                     <p>LARANJA</p>
                 </div>
-                <audio id="eu_vejo_player">
-                    <source src="" type="">
+                <audio id="laranja_player">
+                    <source src="src/audio/cores/laranja.mp3" type="audio/mp3">
                 </audio>
             </div>
 
@@ -124,8 +124,8 @@
                 <div class="card-content">
                     <p>LILÁS</p>
                 </div>
-                <audio id="eu_vejo_player">
-                    <source src="" type="">
+                <audio id="lilas_player">
+                    <source src="src/audio/cores/lilas.mp3" type="audio/mp3">
                 </audio>
             </div>
 
@@ -133,8 +133,8 @@
                 <div class="card-content">
                     <p>AZUL CLARO</p>
                 </div>
-                <audio id="eu_vejo_player">
-                    <source src="" type="">
+                <audio id="azul_claro_player">
+                    <source src="src/audio/cores/azul_claro.mp3" type="audio/mp3">
                 </audio>
             </div>
 
@@ -142,8 +142,8 @@
                 <div class="card-content">
                     <p>LAVANDA</p>
                 </div>
-                <audio id="eu_vejo_player">
-                    <source src="" type="">
+                <audio id="lavanda_player">
+                    <source src="src/audio/cores/lavanda.mp3" type="audio/mp3">
                 </audio>
             </div>
 
@@ -151,8 +151,8 @@
                 <div class="card-content">
                     <p>TURQUESA</p>
                 </div>
-                <audio id="eu_vejo_player">
-                    <source src="" type="">
+                <audio id="turquesa_player">
+                    <source src="src/audio/cores/turquesa.mp3" type="audio/mp3">
                 </audio>
             </div>
         </div>
@@ -175,6 +175,6 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="src/js/app.js"></script>
+    <script src="src/js/cores.js"></script>
 </body>
 </html>
