--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <div class="container">
-            <img src="./src/images/logo apae caruaru.svg" alt="Logo da Apae">
+            <a href="index.html"><img src="./src/images/logo apae caruaru.svg" alt="Logo da Apae"></a>
         </div>
         <div class="row"></div>
     </div>
@@ -21,114 +21,107 @@
     <div class="main">
         <div class="main-cards">
             <div class="card">
-                <div class="card-figure eu_ouco">
-                    <img class="card_img" src="src/images/necessidades/estou-com-fome.jfif" alt="Eu ouço">
+                <div class="card-figure estou_com_fome">
+                    <img class="card_img estou_com_fome" src="src/images/necessidades/estou-com-fome.jfif" alt="Estou com fome">
 
                     <img class="audio-verde-img" src="./src/images/audio-verde.png" alt="audio-verde-img">
                 </div>
                 <div class="card-content">
                     <p>ESTOU COM FOME</p>
                 </div>
-                <audio id="eu_ouco_player">
-                    <source src="src/audio/estou_ouvindo.mp3" type="audio/mp3">
+                <audio id="estou_com_fome_player">
+                    <source src="src/audio/index/estou-com-fome.mp3" type="audio/mp3">
                 </audio>
             </div>
-                            
-            <div class="card eu_quero">
-                <div class="card-figure">
-                    <img class="card_img" src="src/images/necessidades/estou-com-sede.jfif" alt="Eu Quero">
 
+            <div class="card estou-com-sede">
+                <div class="card-figure">
+                    <img class="card_img estou_com_sede" src="src/images/necessidades/estou-com-sede.jfif" alt="Estou com sede">
                     <img class="audio-verde-img" src="./src/images/audio-verde.png" alt="audio-verde-img">
                 </div>
                 <div class="card-content">
                     <p>ESTOU COM SEDE</p>
                 </div>
-                <audio id="eu_quero_player">
-                    <source src="src/audio/eu_quero.mp3" type="audio/mp3">
+                <audio id="estou_com_sede_player">
+                    <source src="src/audio/index/estou-com-sede.mp3" type="audio/mp3">
                 </audio>
             </div>
 
-            <div class="card eu_sinto">
+            <div class="card estou-cansado">
                 <div class="card-figure">
-                    <img class="card_img" src="src/images/necessidades/estou-cansado.jfif" alt="Eu sinto">
-
+                    <img class="card_img estou_cansado" src="src/images/necessidades/estou-cansado.jfif" alt="Estou cansado">
                     <img class="audio-verde-img" src="./src/images/audio-verde.png" alt="audio-verde-img">
                 </div>
                 <div class="card-content">
                     <p>ESTOU CANSADO</p>
                 </div>
-                <audio id="eu_sinto_player">
-                    <source src="src/audio/eu_sinto.mp3" type="audio/mp3">
+                <audio id="estou_cansado_player">
+                    <source src="src/audio/index/estou-cansado.mp3" type="audio/mp3">
                 </audio>
             </div>
 
             <div class="card sim">
                 <div class="card-figure">
-                    <img class="card_img" src="src/images/necessidades/sim.jfif" alt="Eu vejo">
-
+                    <img class="card_img sim" src="src/images/necessidades/sim.jfif" alt="sim">
                     <img class="audio-verde-img" src="./src/images/audio-verde.png" alt="audio-verde-img">
                 </div>
                 <div class="card-content">
                     <p>SIM</p>
                 </div>
-                <audio id="eu_vejo_player">
-                    <source src="./src/audio/eu_vejo.mp3" type="audio/mp3">
+                <audio id="sim_player">
+                    <source src="src/audio/index/sim.mp3" type="audio/mp3">
                 </audio>
             </div>
 
-            <div class="card eu_gosto">
+            <div class="card preciso-ir-ao-banheiro">
                 <div class="card-figure">
-                    <img class="card_img" src="src/images/necessidades/preciso-ir-ao-banheiro.jfif" alt="Eu gosto">
-
+                    <img class="card_img preciso_ir_ao_banheiro" src="src/images/necessidades/preciso-ir-ao-banheiro.jfif" alt="preciso-ir-ao-banheiro">
                     <img class="audio-verde-img" src="./src/images/audio-verde.png" alt="audio-verde-img">
                 </div>
                 <div class="card-content">
                     <p>PRECISO IR AO BANHEIRO</p>
                 </div>
-                <audio id="eu_gosto_player">
-                    <source src="src/audio/eu_gosto.mp3" type="audio/mp3">
+                <audio id="preciso_ir_ao_banheiro_player">
+                    <source src="src/audio/index/preciso-ir-ao-banheiro.mp3" type="audio/mp3">
                 </audio>
             </div>
 
-            <div class="card eu_penso">
+            <div class="card quero-brincar">
                 <div class="card-figure">
-                    <img class="card_img" src="src/images/necessidades/quero-brincar.jfif" alt="Eu penso">
-
+                    <img class="card_img quero_brincar" src="src/images/necessidades/quero-brincar.jfif" alt="quero-brincar">
                     <img class="audio-verde-img" src="./src/images/audio-verde.png" alt="audio-verde-img">
                 </div>
                 <div class="card-content">
                     <p>QUERO BRINCAR</p>
                 </div>
-                <audio id="eu_penso_player">
-                    <source src="src/audio/eu_penso.mp3" type="audio/mp3">
+                <audio id="quero_brincar_player">
+                    <source src="src/audio/index/quero-brincar.mp3" type="audio/mp3">
                 </audio>
             </div>
 
-            <div class="card eu_vejo">
+            <div class="card nao-me-sinto-bem">
                 <div class="card-figure">
-                    <img class="card_img" src="src/images/necessidades/nao-me-sinto-bem.jfif" alt="Sim">
-
+                    <img class="card_img nao_me_sinto_bem" src="src/images/necessidades/nao-me-sinto-bem.jfif" alt="nao-me-sinto-bem">
                     <img class="audio-verde-img" src="./src/images/audio-verde.png" alt="audio-verde-img">
                 </div>
                 <div class="card-content">
                     <p>NÃO ME SINTO BEM</p>
                 </div>
-                <audio id="sim_player">
-                    <source src="src/audio/sim.mp3" type="audio/mp3">
+                <audio id="nao_me_sinto_bem_player">
+                    <source src="src/audio/index/nao-me-sinto-bem.mp3" type="audio/mp3">
                 </audio>
             </div>
-            
+
             <div class="card nao">
                 <div class="card-figure">
-                    <img class="card_img" src="src/images/necessidades/nao.jfif" alt="Não">
-
+                    <img class="card_img nao" src="src/images/necessidades/nao.jfif" alt="nao">
                     <img class="audio-verde-img" src="./src/images/audio-verde.png" alt="audio-verde-img">
                 </div>
                 <div class="card-content">
                     <p>NÃO</p>
                 </div>
                 <audio id="nao_player">
-                    <source src="src/audio/nao.mp3" type="audio/mp3">
+                    <source src="src/audio/index/nao.mp3" type="audio/mp3">
                 </audio>
             </div>
         </div>
@@ -151,6 +144,6 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="src/js/app.js"></script>
+    <script src="src/js/index.js"></script>
 </body>
 </html>
