--- a/numeros.html
+++ b/numeros.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <div class="container">
-            <img src="./src/images/logo apae caruaru.svg" alt="Logo da Apae">
+            <a href="index.html"><img src="./src/images/logo apae caruaru.svg" alt="Logo da Apae"></a>
         </div>
         <div class="row"></div>
     </div>
@@ -23,121 +23,121 @@
 
             <div class="card">
                 <div class="card-figure">
-                    <a class="eu_ouco"><img class="card_img" src="src/images/numeros/um.png" alt="Eu ouço"></a>
+                    <img class="card_img um" src="src/images/numeros/um.png" alt="Um">
                 </div>
                 <div class="card-content">
                     <p>UM</p>
                 </div>
-                <audio id="eu_ouco_player">
-                    <source src="" type="">
+                <audio id="um_player">
+                    <source src="src/audio/numeros/um.mp3" type="audio/mp3">
                 </audio>
             </div>
                             
             <div class="card">
                 <div class="card-figure">
-                    <a class="eu_ouco"><img class="card_img" src="src/images/numeros/dois.png" alt="Eu ouço"></a>
+                    <img class="card_img dois" src="src/images/numeros/dois.png" alt="Dois">
                 </div>
                 <div class="card-content">
                     <p>DOIS</p>
                 </div>
-                <audio id="eu_ouco_player">
-                    <source src="" type="">
+                <audio id="dois_player">
+                    <source src="src/audio/numeros/dois.mp3" type="audio/mp3">
                 </audio>
             </div>
 
             <div class="card">
                 <div class="card-figure">
-                    <a class="eu_ouco"><img class="card_img" src="src/images/numeros/tres.png" alt="Eu ouço"></a>
+                    <img class="card_img tres" src="src/images/numeros/tres.png" alt="Três">
                 </div>
                 <div class="card-content">
                     <p>TRÊS</p>
                 </div>
-                <audio id="eu_ouco_player">
-                    <source src="" type="">
+                <audio id="tres_player">
+                    <source src="src/audio/numeros/tres.mp3" type="audio/mp3">
                 </audio>
             </div>
 
             <div class="card">
                 <div class="card-figure">
-                    <a class="eu_ouco"><img class="card_img" src="src/images/numeros/quatro.png" alt="Eu ouço"></a>
+                    <img class="card_img quatro" src="src/images/numeros/quatro.png" alt="Quatro">
                 </div>
                 <div class="card-content">
                     <p>QUATRO</p>
                 </div>
-                <audio id="eu_ouco_player">
-                    <source src="" type="">
+                <audio id="quatro_player">
+                    <source src="src/audio/numeros/quatro.mp3" type="audio/mp3">
                 </audio>
             </div>
 
             <div class="card">
                 <div class="card-figure">
-                    <a class="eu_ouco"><img class="card_img" src="src/images/numeros/cinco.png" alt="Eu ouço"></a>
+                    <img class="card_img cinco" src="src/images/numeros/cinco.png" alt="Cinco">
                 </div>
                 <div class="card-content">
                     <p>CINCO</p>
                 </div>
-                <audio id="eu_ouco_player">
-                    <source src="" type="">
+                <audio id="cinco_player">
+                    <source src="src/audio/numeros/cinco.mp3" type="audio/mp3">
                 </audio>
             </div>
 
             <div class="card">
                 <div class="card-figure">
-                    <a class="eu_ouco"><img class="card_img" src="src/images/numeros/seis.png" alt="Eu ouço"></a>
+                    <img class="card_img seis" src="src/images/numeros/seis.png" alt="Seis">
                 </div>
                 <div class="card-content">
                     <p>SEIS</p>
                 </div>
-                <audio id="eu_ouco_player">
-                    <source src="" type="">
+                <audio id="seis_player">
+                    <source src="src/audio/numeros/seis.mp3" type="audio/mp3">
                 </audio>
             </div>
 
             <div class="card">
                 <div class="card-figure">
-                    <a class="eu_ouco"><img class="card_img" src="src/images/numeros/sete.png" alt="Eu ouço"></a>
+                    <img class="card_img sete" src="src/images/numeros/sete.png" alt="Sete">
                 </div>
                 <div class="card-content">
                     <p>SETE</p>
                 </div>
-                <audio id="eu_ouco_player">
-                    <source src="" type="">
+                <audio id="sete_player">
+                    <source src="src/audio/numeros/sete.mp3" type="audio/mp3">
                 </audio>
             </div>
             
             <div class="card">
                 <div class="card-figure">
-                    <a class="eu_ouco"><img class="card_img" src="src/images/numeros/oito.png" alt="Eu ouço"></a>
+                    <img class="card_img oito" src="src/images/numeros/oito.png" alt="Oito">
                 </div>
                 <div class="card-content">
                     <p>OITO</p>
                 </div>
-                <audio id="eu_ouco_player">
-                    <source src="" type="">
+                <audio id="oito_player">
+                    <source src="src/audio/numeros/oito.mp3" type="audio/mp3">
                 </audio>
             </div>
 
             <div class="card">
                 <div class="card-figure">
-                    <a class="eu_ouco"><img class="card_img" src="src/images/numeros/nove.png" alt="Eu ouço"></a>
+                    <img class="card_img nove" src="src/images/numeros/nove.png" alt="Nove">
                 </div>
                 <div class="card-content">
                     <p>NOVE</p>
                 </div>
-                <audio id="eu_ouco_player">
-                    <source src="" type="">
+                <audio id="nove_player">
+                    <source src="src/audio/numeros/nove.mp3" type="audio/mp3">
                 </audio>
             </div>
 
             <div class="card">
                 <div class="card-figure">
-                    <a class="eu_ouco"><img class="card_img" src="src/images/numeros/dez.png" alt="Eu ouço"></a>
+                    <img class="card_img dez" src="src/images/numeros/dez.png" alt="Dez">
                 </div>
                 <div class="card-content">
                     <p>DEZ</p>
                 </div>
-                <audio id="eu_ouco_player">
-                    <source src="" type="">
+                <audio id="dez_player">
+                    <source src="src/audio/numeros/dez.mp3" type="audio/mp3">
                 </audio>
             </div>
         </div>
@@ -160,6 +160,6 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="src/js/app.js"></script>
+    <script src="src/js/numeros.js"></script>
 </body>
 </html>
