alteração nas dimensões

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="main">
-        <div class="main-cards">
+        <div class="main-cards-necessidades">
             <div class="card">
                 <div class="card-figure estou_com_fome">
                     <img class="card_img estou_com_fome" src="src/images/necessidades/estou-com-fome.jfif" alt="Estou com fome">
