--- a/numeros.html
+++ b/numeros.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="main">
-        <div class="main-cards">
+        <div class="main-cards-numeros ">
 
             <div class="card">
                 <div class="card-figure">
