Colocando logo da wyden e melhorando o footer

--- a/cores.html
+++ b/cores.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apae Home</title>
-    <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -15,7 +15,16 @@
         <div class="container">
             <a href="index.html"><img src="./src/images/logo apae caruaru.svg" alt="Logo da Apae"></a>
         </div>
-        <div class="row"></div>
+        <div class="row">
+            <div class="apoio">
+                <div>
+                    <img class="apoio-img" src="./src/images/UNIFAVIP TAGLINE - VERMELHO E ROXO.png" alt="">
+                </div>
+                <div>
+                    <img class="apoio-img" class="" src="./src/images/CC E ADS.png" alt="">
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="main">
