--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="row">
             <div class="apoio">
                 <div>
-                    <img class="apoio-img" src="./src/images/UNIFAVIP TAGLINE - VERMELHO E ROXO.png" alt="">
+                    <img class="apoio-img apoio1" src="./src/images/UNIFAVIP TAGLINE - VERMELHO E ROXO.png" alt="">
                 </div>
                 <div>
-                    <img class="apoio-img" class="" src="./src/images/CC E ADS.png" alt="">
+                    <img class="apoio-img apoio2" class="" src="./src/images/logoROXOeVERMELHO.png" alt="">
                 </div>
             </div>
         </div>
